--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -219,6 +219,7 @@ After each level, participants fill out the NASA-TLX on a tablet.
 Then, they complete the effort discounting procedure on screen, where each possible pairing of the four *n*-back levels is presented in a randomized order.
 Participants are instructed to decide as realistically as possible, because one of their choices from the last iteration steps will be randomly chosen for one final run of *n*-back.
 This is only done to incentivise truthful behavior in the effort discounting procedure, so the *n*-back data of this part will not be analyzed.
+After the computer paradigm, participants will fill out a short questionnaire on the tablet, indicating whether they have adhered to the instructions (yes/no) and what the primary motivation for their decisions during the ED procedure was (avoid boredom/relax/avoid effort/seek challenge/other).
 The second session consists of an emotion regulation task with negative pictures and the instruction to suppress facial reactions, detach cognitively from the picture content, and distract oneself, respectively.
 The paradigm follows the same structure of task and effort discounting procedure, but participants can decide which strategy they want to reapply in the last block.
 Study data will be collected and managed using REDCap electronic data capture tools hosted at Technische Universität Dresden[@Harris2009; @Harris2019].
